Bug fixes, cleanup and tweaks

--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -60,7 +60,7 @@
         android:layout_alignParentBottom="true"
         android:background="@android:color/transparent"
         ads:adSize="SMART_BANNER"
-        ads:adUnitId="yourAppTokenHere" />
+        ads:adUnitId="@string/adMobToken"/>
 
 
 </RelativeLayout>
