--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="com.example.timepass.sampleapp.Settings"
-android:fitsSystemWindows="true">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
 <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,8 +12,8 @@ android:fitsSystemWindows="true">
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/toolbarColor"
-        app:theme="@style/AppBaseTheme"
         app:navigationIcon="?attr/homeAsUpIndicator"
+    app:theme="@style/AppBaseTheme"
         >
         
     </android.support.v7.widget.Toolbar>
@@ -26,10 +23,11 @@ android:fitsSystemWindows="true">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/toolbar" >
-    
-         <ListView android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:id="@android:id/list">
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     
              </ListView>
      
