--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/activity_main4"
@@ -20,7 +19,6 @@
         android:background="@color/toolbarColor"
         app:popupTheme="@style/MyActionBarMenu"
         app:theme="@style/AppBaseTheme">
-
     </android.support.v7.widget.Toolbar>
 
 
@@ -35,11 +33,13 @@
             android:id="@+id/listView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_above="@+id/listText"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin">
-
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/main_toolbar"
+            android:layout_above="@+id/listText">
         </ListView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
@@ -48,19 +48,13 @@
         android:id="@+id/listText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/adView"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/zuletztAbger"
         android:textColor="#000000" />
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/transparent"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/adMobToken"/>
-
 
 </RelativeLayout>
