--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -1,60 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
-    android:id="@+id/activity_main4"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    tools:context=".MainActivity">
-
-
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/main_toolbar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentRight="false"
-        android:background="@color/toolbarColor"
-        app:popupTheme="@style/MyActionBarMenu"
-        app:theme="@style/AppBaseTheme">
-    </android.support.v7.widget.Toolbar>
-
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/listText"
-        android:layout_below="@+id/main_toolbar">
-
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/main_toolbar"
-            android:layout_above="@+id/listText">
-        </ListView>
-
-    </android.support.v4.widget.SwipeRefreshLayout>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:background="@drawable/tag_background">
 
     <TextView
-        android:id="@+id/listText"
+        android:id="@+id/tag_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="4dp"
-        android:paddingTop="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="@string/zuletztAbger"
-        android:textColor="#000000" />
+        tools:text="5a"
+        android:layout_gravity="center_vertical"
+        android:padding="6dp"
+        android:textSize="14sp"
+        android:textColor="@color/lightGrey"
+        android:maxLines="1"
+        android:lines="1" />
 
-</RelativeLayout>
+    <ImageButton
+        android:src="@drawable/ic_highlight_off_white_24dp"
+        android:contentDescription="Delete icon on tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:tint="@color/lightGrey"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/newbutton"
+        android:clickable="true"
+        android:onClick="clickNew"
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:paddingRight="4dp" />
+
+
+</LinearLayout>
