--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,15 @@
     <color name="refresh_progress_1">#03A9F4</color>
 	<color name="refresh_progress_2">#CDDC39</color>
 	<color name="refresh_progress_3">#4CAF50</color>
-    <color name="toolbarColor2">#353535</color>
+
+    <!--
     <color name="toolbarColor">#424242</color>
+    -->
     <color name="primaryDark">#004D40</color>
     <color name="accentColor">#00897B</color>
-    <color name="tertiary">#999999</color>
-    <color name="acc2">#000000</color>
     <color name="textColor">#FAFAFA</color>
+    <color name="textColorInverse">#0e0e0e</color> <!-- #0e0e0e -->
+    <!--<color name="textColor">#181818</color>-->
     <color name="MenuColor">#424242</color>
     <color name="ListViewItemColor">#ff303030</color>
     <color name="ListViewItemBlau">#0099CC</color>
@@ -17,12 +19,25 @@
     <color name="Schrift1">#424242</color>
     <color name="Schrift2">#5c5c5c</color>
 
+    <color name="lightGrey">#6b6b6b</color>
+    <color name="reallyLightGrey">#f5f5f5</color>
+    <color name="tagBackground">#2A2E31</color>
+
     <color name="Weiss">#ffffff</color>
     <color name="Schwarz">#000000</color>
 
     <color name="disabled">#a0a0a0</color>
     <color name="disabled2">#bababa</color>
 
+    <color name="introBackground">@color/colorPrimary</color>
+    <color name="switchActivated">#0099CC</color>
 
+    <color name="colorPrimary">#757575</color>
+    <color name="colorPrimaryDark">#616161</color>
+    <color name="colorAccent">#616161</color> <!-- #00897B -->
+    <color name="toolbarColor">@color/colorPrimary</color>
+
+    <color name="cardEntfall">#EF5350</color>
+    <color name="cardVertretung">#FFFFFF</color>
 
 </resources>
