--- a/app/src/main/res/xml/notification_preferences.xml
+++ b/app/src/main/res/xml/notification_preferences.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    
-            <SwitchPreference android:title="Benachrichtigungen"
+
+    <SwitchPreference
+        android:title="@string/notification_setting_title"
             android:defaultValue="true"
             android:key="notification"
-            android:summary="Benachrichtigung bei Ausfall"/>
+        android:summary="@string/notification_setting_summary" />
         
         	<ListPreference 
             android:entries="@array/Intervall_neu"
             android:entryValues="@array/Intervall_neu_values"
             android:defaultValue="3600000"
-            android:title="Benachrichtigungsintervall"
-            android:summary="Bitte wähle den Prüfintervall"
+                android:title="@string/notification_interval_title"
+                android:summary="@string/notification_interval_summary"
             android:key="AbrufIntervall"
             android:dialogTitle="Intervall"
             android:negativeButtonText="Zurück!"
