--- a/app/src/main/res/layout/webview.xml
+++ b/app/src/main/res/layout/webview.xml
@@ -20,7 +20,7 @@
     </android.support.v7.widget.Toolbar>
 
     <WebView
-        android:id="@+id/webView1"
+        android:id="@+id/webView"
         android:layout_below="@+id/toolbar"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
