--- a/app/src/main/res/layout/intro_fragment_generic.xml
+++ b/app/src/main/res/layout/intro_fragment_generic.xml
@@ -18,7 +18,7 @@
         android:layout_weight="2"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        tools:text="Lesezeichen" />
+        tools:text="Titel" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,6 +47,6 @@
         android:layout_weight="3"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam." />
+        tools:text="Text" />
 
 </LinearLayout>
