--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -11,10 +11,16 @@
         android:orderInCategory="2"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+
+    <item
+        android:id="@+id/action_feedback"
+        android:orderInCategory="3"
+        android:showAsAction="never"
+        android:title="@string/action_feedback"/>
     
     <item
         android:id="@+id/action_webview"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:showAsAction="never"
         android:title="@string/action_webview"/>
 
