First theming tries

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,5 @@
     <color name="cardEntfall">#EF5350</color>
     <color name="cardVertretung">#FFFFFF</color>
 
+    <color name="pinkBackground">#F8BBD0</color>
 </resources>
