--- a/app/src/main/res/layout/intro_fragment_settings.xml
+++ b/app/src/main/res/layout/intro_fragment_settings.xml
@@ -47,8 +47,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Stufe"
-                    android:textColor="@color/Weiss"
-                    tools:textColor="@color/Schwarz"
+                    android:textColor="@android:color/white"
+                    tools:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:layout_centerInParent="true"
@@ -85,8 +85,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Klasse"
-                    android:textColor="@color/Weiss"
-                    tools:textColor="@color/Schwarz"
+                    android:textColor="@android:color/white"
+                    tools:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:gravity="center_vertical"
                     android:layout_centerInParent="true"
@@ -117,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Benachrichtigungen"
-                android:textColorHint="@color/Weiss"
+                android:textColorHint="@android:color/white"
                 android:textSize="20sp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
