--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -5,7 +5,7 @@
     android:maxLines="1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/Schwarz"
+    android:textColor="@android:color/black"
     android:padding="10dp"
     android:ellipsize="marquee"
     android:gravity="center" />
