--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,8 +22,8 @@
 
 
     <style name="MyActionBarMenu" parent="@style/Widget.AppCompat.Light.ListView.DropDown">
-        <item name="android:textColorPrimary">@color/Schwarz</item>
-        <item name="android:background">@color/Weiss</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:background">@android:color/white</item>
 
     </style>
 
