Add green and orange theme

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,4 +57,17 @@
         <item name="colorAccent">#ff94c2</item>
     </style>
 
+    <style name="GreenTheme" parent="AppTheme">
+        <item name="colorPrimary">#9ccc65</item>
+        <item name="colorPrimaryDark">#6b9b37</item>
+        <item name="colorAccent">#8d6e63</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="colorControlNormal">@android:color/black</item>
+    </style>
+
+    <style name="OrangeTheme" parent="AppTheme">
+        <item name="colorPrimary">#ff9800</item>
+        <item name="colorPrimaryDark">#c66900</item>
+        <item name="colorAccent">#9c64a6</item>
+    </style>
 </resources>
