--- a/app/src/main/res/values/alertDialogStyle.xml
+++ b/app/src/main/res/values/alertDialogStyle.xml
@@ -8,6 +8,6 @@
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
         <item name="android:windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 </resources>
