--- a/app/src/main/res/values/alertDialogStyle.xml
+++ b/app/src/main/res/values/alertDialogStyle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="YourAlertDialogTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@android:color/white</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsFloating">true</item>
