--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:theme="@style/AppTheme.NoActionBar"
+    app:theme="@style/AppTheme.Light.NoActionBar"
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         app:navigationIcon="?attr/homeAsUpIndicator"
-        app:theme="@style/AppTheme.NoActionBar"
+        app:theme="@style/AppTheme.Light.NoActionBar"
         >
         
     </android.support.v7.widget.Toolbar>
