--- a/app/src/main/res/layout/intro_fragment_settings.xml
+++ b/app/src/main/res/layout/intro_fragment_settings.xml
@@ -138,6 +138,6 @@
         android:layout_weight="3"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam." />
+        tools:text="@string/settings_slide_descr" />
 
 </LinearLayout>
