--- a/app/src/main/res/layout/intro_fragment_generic.xml
+++ b/app/src/main/res/layout/intro_fragment_generic.xml
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
+            android:paddingRight="16dp"
+            android:contentDescription="@string/welcome_slide_content_descr"/>
     </LinearLayout>
 
     <TextView
