--- a/app/src/main/res/xml/notification_preferences.xml
+++ b/app/src/main/res/xml/notification_preferences.xml
@@ -14,8 +14,8 @@
                 android:title="@string/notification_interval_title"
                 android:summary="@string/notification_interval_summary"
             android:key="AbrufIntervall"
-            android:dialogTitle="Intervall"
-            android:negativeButtonText="Zurück!"
+            android:dialogTitle="@string/settings_dialog_title"
+            android:negativeButtonText="@string/settings_dialog_back"
             android:persistent="true"/>
     
 </PreferenceScreen>
