--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -1,27 +1,28 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_info"
         android:orderInCategory="1"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/infoTitle"/>
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="2"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/action_settings"/>
 
     <item
         android:id="@+id/action_feedback"
         android:orderInCategory="3"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/action_feedback"/>
     
     <item
         android:id="@+id/action_webview"
         android:orderInCategory="4"
-        android:showAsAction="never"
+        app:showAsAction="never"
         android:title="@string/action_webview"/>
 
 </menu>
