--- a/app/src/main/res/layout/class_picker_preference.xml
+++ b/app/src/main/res/layout/class_picker_preference.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@android:id/title"
-        android:text="TextView"
+        android:text="@string/placeholder_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -16,7 +16,7 @@
         android:id="@android:id/summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Summary" />
+        android:text="@string/placeholder_summary" />
 
 
 </LinearLayout>
