FIX: Make preferenceActivity private

--- a/app/src/main/res/xml/preferenceheaders.xml
+++ b/app/src/main/res/xml/preferenceheaders.xml
@@ -25,7 +25,7 @@
     <PreferenceCategory android:title="@string/miscellaneous">
 
         <PreferenceScreen android:title="@string/notification_setting_title">
-            <intent android:action="de.aurora.MggVertretungsplan.EINSTELLUNGEN" />
+            <intent android:action=".EINSTELLUNGEN" />
         </PreferenceScreen>
 
         <SwitchPreference
