--- a/app/src/main/res/layout/view_date_heading.xml
+++ b/app/src/main/res/layout/view_date_heading.xml
@@ -13,6 +13,6 @@
         android:textSize="20sp"
         android:paddingLeft="15dp"
         android:textStyle="bold"
-        tools:text="Freitag, 23.09.2016" />
+        tools:text="Sonntag, 01.01.2017" />
 
 </LinearLayout>
