--- a/app/src/main/res/layout/view_date_heading.xml
+++ b/app/src/main/res/layout/view_date_heading.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:textStyle="bold"
         tools:text="Sonntag, 01.01.2017" />
 
