--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -2,10 +2,10 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="?android:attr/spinnerDropDownItemStyle"
-    android:maxLines="1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@android:color/black"
-    android:padding="10dp"
     android:ellipsize="marquee"
-    android:gravity="center" />
+    android:gravity="center"
+    android:maxLines="1"
+    android:padding="10dp"
+    android:textColor="@android:color/black" />
