--- a/app/src/main/res/layout/intro_fragment_generic.xml
+++ b/app/src/main/res/layout/intro_fragment_generic.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@id/main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -32,9 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:contentDescription="@string/slide_welcome_content_descr"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:contentDescription="@string/slide_welcome_content_descr"/>
+            android:paddingRight="16dp" />
     </LinearLayout>
 
     <TextView
