--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:theme="@style/AppTheme.Light.NoActionBar"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    app:theme="@style/AppTheme.Light.NoActionBar">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -12,9 +12,8 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         app:navigationIcon="?attr/homeAsUpIndicator"
-        app:theme="@style/AppTheme.Light.NoActionBar"
-        >
-        
+        app:theme="@style/AppTheme.Light.NoActionBar">
+
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
