--- a/app/src/main/res/layout/view_date_heading.xml
+++ b/app/src/main/res/layout/view_date_heading.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:id="@+id/heading_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/heading_layout">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/heading_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         tools:text="Sonntag, 01.01.2017" />
 
