--- a/app/src/main/res/layout/view_no_info_card.xml
+++ b/app/src/main/res/layout/view_no_info_card.xml
@@ -2,19 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="2dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp">
+    android:layout_marginRight="4dp"
+    android:padding="2dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
+        android:layout_margin="2dp"
         card_view:cardBackgroundColor="@color/reallyLightGrey"
-        android:layout_margin="2dp">
+        card_view:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,9 +25,9 @@
                 android:id="@+id/no_info_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:padding="15dp"
                 android:textSize="20sp"
-                android:ellipsize="end"
                 tools:text="info_title" />
 
         </LinearLayout>
