--- a/app/src/main/res/drawable/two_value_colors.xml
+++ b/app/src/main/res/drawable/two_value_colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true" android:color="@color/Schrift2"/>
-    <item android:state_enabled="false" android:color="@color/disabled2" />
-    <item android:color="@color/Schrift2"/>
+    <item android:color="@color/Schrift2" android:state_enabled="true" />
+    <item android:color="@color/disabled2" android:state_enabled="false" />
+    <item android:color="@color/Schrift2" />
 </selector>
