--- a/app/src/main/res/layout/view_date_heading.xml
+++ b/app/src/main/res/layout/view_date_heading.xml
@@ -14,6 +14,6 @@
         android:paddingRight="15dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="Sonntag, 01.01.2017" />
+        tools:text="Date_text" />
 
 </LinearLayout>
