--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,6 @@
     <color name="Schrift1">#424242</color>
     <color name="Schrift2">#5c5c5c</color>
 
-    <color name="lightGrey">#6b6b6b</color>
     <color name="reallyLightGrey">#f5f5f5</color>
 
     <color name="disabled">#a0a0a0</color>
@@ -22,8 +21,8 @@
     <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#616161</color>
 
-    <color name="cardEntfall">#EF5350</color>
-    <color name="cardVertretung">#FFFFFF</color>
+    <color name="cardCancellation">#FF6961</color>
+    <color name="cardSubstitution">#779ECB</color>
 
     <!-- Colors shown in the color picker in the settings -->
     <array name="theme_picker">
