FEATURE: Display old days - setting
This setting enables the possibility to hide old days (either days of
the past or of today, but it's already after 4 pm)

--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -30,8 +30,7 @@
 
         <SwitchPreference
             android:defaultValue="true"
-            android:enabled="false"
-            android:key="AktTagAnzeigen"
+            android:key="displayCurrentDay"
             android:summary="@string/settings_past_days_summary"
             android:title="@string/settings_past_days_title" />
 
